remove nav components

--- a/.gitignore
+++ b/.gitignore
@@ -85,5 +85,6 @@ crashlytics-build.properties
 /[Aa]ssets/plastic/
 /[Aa]ssets/TextMesh Pro
 /[Aa]ssets/Total Music Collection/
+/[Aa]ssets/Navigation
 #/[Aa]ssets/
 #/[Aa]ssets/
