--- a/Assets/Imported Referenced/ECM2/ECM2.asmdef
+++ b/Assets/Imported Referenced/ECM2/ECM2.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "MyQuestScripts",
+    "name": "ECM2",
     "rootNamespace": "",
     "references": [
-        "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:1dd4efe6b41648509aececc3ef871ff6"
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
