--- a/Assets/Imported Referenced/ECM2/Editor/ECM2_Editor.asmdef
+++ b/Assets/Imported Referenced/ECM2/Editor/ECM2_Editor.asmdef
@@ -1,12 +1,14 @@
 {
-    "name": "MyQuestScripts",
+    "name": "ECM2_Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:1dd4efe6b41648509aececc3ef871ff6"
+        "GUID:200d415681ad0974d9472baa53d60792",
+        "GUID:0acc523941302664db1f4e527237feb3",
+        "GUID:27619889b8ba8c24980f49ee34dbb44a"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
