--- a/Assets/Safe_To_Share/Scripts/DormAndHome/MyDormScripts.asmdef
+++ b/Assets/Safe_To_Share/Scripts/DormAndHome/MyDormScripts.asmdef
@@ -9,7 +9,9 @@
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:ca91fa3097344081af31083bb32cbde5",
         "GUID:3627295ec002ed84fad2824b1681bedf",
-        "GUID:200d415681ad0974d9472baa53d60792"
+        "GUID:200d415681ad0974d9472baa53d60792",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
