--- a/Assets/Safe_To_Share/Scripts/SaveStuff/MySaveScripts.asmdef
+++ b/Assets/Safe_To_Share/Scripts/SaveStuff/MySaveScripts.asmdef
@@ -15,7 +15,8 @@
     "GUID:3569e5de841d45758fe8159e4d0a38e3",
     "GUID:0ac65b8fcf4ecc241ba337792a733b93",
     "GUID:7657b0c4830f12041b8e3046ea267ca5",
-    "GUID:3627295ec002ed84fad2824b1681bedf"
+    "GUID:3627295ec002ed84fad2824b1681bedf",
+    "GUID:9c82077c3e1345fe94ea893f2756f363"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
