--- a/Assets/Safe_To_Share/Scripts/MyScripts.asmdef
+++ b/Assets/Safe_To_Share/Scripts/MyScripts.asmdef
@@ -22,7 +22,8 @@
         "GUID:00c69af6635eb95459965de537f97531",
         "GUID:2e4f7a357bbb8164b853dc2cc9e0c558",
         "GUID:3627295ec002ed84fad2824b1681bedf",
-        "GUID:200d415681ad0974d9472baa53d60792"
+        "GUID:200d415681ad0974d9472baa53d60792",
+        "GUID:1e1dcf027edc42808026af1b0e05f47c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
