--- a/Assets/Safe_To_Share/Scripts/MyScripts.asmdef
+++ b/Assets/Safe_To_Share/Scripts/MyScripts.asmdef
@@ -23,7 +23,8 @@
         "GUID:2e4f7a357bbb8164b853dc2cc9e0c558",
         "GUID:3627295ec002ed84fad2824b1681bedf",
         "GUID:200d415681ad0974d9472baa53d60792",
-        "GUID:1e1dcf027edc42808026af1b0e05f47c"
+        "GUID:1e1dcf027edc42808026af1b0e05f47c",
+        "GUID:9c82077c3e1345fe94ea893f2756f363"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
