--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.addressables": "1.19.19",
+    "com.unity.animation.rigging": "1.1.1",
     "com.unity.burst": "1.7.3",
     "com.unity.cinemachine": "2.8.6",
     "com.unity.collab-proxy": "1.17.1",
