starting to look done

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,8 +11,10 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.4.4",
     "com.unity.jobs": "0.70.0-preview.7",
+    "com.unity.performance.profile-analyzer": "1.1.1",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.render-pipelines.universal": "12.1.7",
+    "com.unity.shaderanalysis": "1.0.0",
     "com.unity.terrain-tools": "4.0.3",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
