updated to unity 2021.3.26f1
looking through unitys changelog it looked like some of the changes was stuff I wanted to choose to update. But reget it now when I have to rebuild the addresabbles libary.

--- a/Assets/Safe_To_Share/Scripts/Holders/MyHolderScripts.asmdef
+++ b/Assets/Safe_To_Share/Scripts/Holders/MyHolderScripts.asmdef
@@ -12,7 +12,8 @@
         "GUID:200d415681ad0974d9472baa53d60792",
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:5bfb5da46011ad84ebcf9d24fa4945e9",
-        "GUID:71e6938cce8043bca693aecd06bf6311"
+        "GUID:71e6938cce8043bca693aecd06bf6311",
+        "GUID:98dc3c7cbe1ae424f848ad89643d0e3c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
