--- a/Assets/Safe_To_Share/Scripts/Movement/HoverMovement/Movement.asmdef
+++ b/Assets/Safe_To_Share/Scripts/Movement/HoverMovement/Movement.asmdef
@@ -2,7 +2,8 @@
     "name": "Movement",
     "rootNamespace": "",
     "references": [
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:98dc3c7cbe1ae424f848ad89643d0e3c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
