--- a/Assets/Safe_To_Share/Scripts/Movement/NavAgentMover/NavAgentMovement.asmdef
+++ b/Assets/Safe_To_Share/Scripts/Movement/NavAgentMover/NavAgentMovement.asmdef
@@ -1,4 +1,16 @@
-﻿{
-  "name": "NavAgentMovement",
-  "references":[ "GUID:5bfb5da46011ad84ebcf9d24fa4945e9" ]
+{
+    "name": "NavAgentMovement",
+    "rootNamespace": "",
+    "references": [
+        "GUID:98dc3c7cbe1ae424f848ad89643d0e3c"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
