--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,29 +1,30 @@
 {
   "dependencies": {
-    "com.unity.addressables": "1.19.19",
-    "com.unity.ai.navigation": "1.0.0-exp.4",
-    "com.unity.animation.rigging": "1.1.1",
-    "com.unity.burst": "1.7.3",
-    "com.unity.cinemachine": "2.9.1",
+    "com.unity.addressables": "1.21.12",
+    "com.unity.ai.navigation": "1.1.3",
+    "com.unity.animation.rigging": "1.2.1",
+    "com.unity.burst": "1.8.4",
+    "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.4",
-    "com.unity.formats.fbx": "4.1.3",
-    "com.unity.ide.rider": "3.0.21",
+    "com.unity.formats.fbx": "4.2.1",
+    "com.unity.ide.rider": "3.0.22",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.5.1",
     "com.unity.jobs": "0.70.0-preview.7",
     "com.unity.localization": "1.3.2",
+    "com.unity.memoryprofiler": "1.0.0",
     "com.unity.performance.profile-analyzer": "1.2.2",
     "com.unity.polybrush": "1.1.4",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.profiling.core": "1.0.2",
-    "com.unity.render-pipelines.universal": "12.1.11",
+    "com.unity.render-pipelines.universal": "14.0.7",
     "com.unity.shaderanalysis": "1.0.0",
-    "com.unity.terrain-tools": "4.0.5",
+    "com.unity.terrain-tools": "5.0.3",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.5",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.4",
+    "com.unity.timeline": "1.7.4",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.5",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "io.backtrace.unity": "3.8.0",
