--- a/Assets/Safe_To_Share/Scripts/Dialogue/MyDialogueScripts.asmdef
+++ b/Assets/Safe_To_Share/Scripts/Dialogue/MyDialogueScripts.asmdef
@@ -1,10 +1,21 @@
 {
-  "name": "MyDialogueScripts",
-  "references": [
-    "GUID:1dd4efe6b41648509aececc3ef871ff6",
-    "GUID:3569e5de841d45758fe8159e4d0a38e3",
-    "GUID:9d8681c8201c491cb2cbd531f2753f52",
-    "GUID:00c69af6635eb95459965de537f97531",
-    "GUID:3627295ec002ed84fad2824b1681bedf"
-  ]
+    "name": "MyDialogueScripts",
+    "rootNamespace": "",
+    "references": [
+        "GUID:1dd4efe6b41648509aececc3ef871ff6",
+        "GUID:9d8681c8201c491cb2cbd531f2753f52",
+        "GUID:00c69af6635eb95459965de537f97531",
+        "GUID:3627295ec002ed84fad2824b1681bedf",
+        "GUID:3924299c4090ce042b191c0a418cc394",
+        "GUID:0ac65b8fcf4ecc241ba337792a733b93"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
